<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_header_camera">

        <ListPreference
            app:defaultValue="1920x1080"
            app:entries="@array/resolution_entries"
            app:entryValues="@array/resolution_values"
            app:key="camera_resolution"
            app:title="@string/pref_title_resolution"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="75"
            app:entries="@array/quality_entries"
            app:entryValues="@array/quality_values"
            app:key="camera_quality"
            app:title="@string/pref_title_quality"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_capture">

        <EditTextPreference
            app:defaultValue="30"
            app:key="capture_interval"
            app:title="@string/pref_title_interval"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="never"
            app:entries="@array/stop_condition_entries"
            app:entryValues="@array/stop_condition_values"
            app:key="stop_condition"
            app:title="@string/pref_title_stop_condition"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue=""
            app:key="stop_time"
            app:title="@string/pref_title_stop_time"
            app:useSimpleSummaryProvider="true"
            app:dependency="stop_condition" />

        <EditTextPreference
            app:defaultValue="100"
            app:key="stop_count"
            app:title="@string/pref_title_stop_count"
            app:useSimpleSummaryProvider="true"
            app:dependency="stop_condition" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_storage">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="auto_clean"
            app:title="@string/pref_title_auto_clean" />

        <EditTextPreference
            app:defaultValue="100"
            app:key="min_space"
            app:title="@string/pref_title_min_space"
            app:useSimpleSummaryProvider="true"
            app:dependency="auto_clean" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_email">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="send_email"
            app:title="@string/pref_title_send_email" />

        <EditTextPreference
            app:defaultValue=""
            app:key="email_address"
            app:title="@string/pref_title_email_address"
            app:useSimpleSummaryProvider="true"
            app:dependency="send_email" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_cloud_storage">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="cloud_enabled"
            app:title="@string/pref_title_cloud_enabled" />

        <ListPreference
            app:defaultValue="none"
            app:entries="@array/cloud_provider_entries"
            app:entryValues="@array/cloud_provider_values"
            app:key="cloud_provider"
            app:title="@string/pref_title_cloud_provider"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:key="cloud_access_key"
            app:title="@string/pref_title_cloud_access_key"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:key="cloud_secret_key"
            app:title="@string/pref_title_cloud_secret_key"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:key="cloud_region"
            app:title="@string/pref_title_cloud_region"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:key="cloud_bucket"
            app:title="@string/pref_title_cloud_bucket"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:key="cloud_endpoint"
            app:title="@string/pref_title_cloud_endpoint"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="cloud_encryption_enabled"
            app:title="@string/pref_title_cloud_encryption"
            app:dependency="cloud_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="cloud_resumable_enabled"
            app:title="@string/pref_title_cloud_resumable"
            app:dependency="cloud_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="cloud_auto_upload"
            app:title="@string/pref_title_cloud_auto_upload"
            app:dependency="cloud_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="cloud_delete_on_success"
            app:title="@string/pref_title_cloud_delete_on_success"
            app:dependency="cloud_enabled" />

        <EditTextPreference
            app:defaultValue="photos"
            app:key="cloud_path_prefix"
            app:title="@string/pref_title_cloud_path_prefix"
            app:useSimpleSummaryProvider="true"
            app:dependency="cloud_enabled" />

        <Preference
            app:key="cloud_test_connection"
            app:title="@string/pref_title_cloud_test_connection"
            app:dependency="cloud_enabled" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_smtp">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="smtp_enabled"
            app:title="@string/pref_title_smtp_enabled" />

        <EditTextPreference
            app:key="smtp_host"
            app:title="@string/pref_title_smtp_host"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_port"
            app:title="@string/pref_title_smtp_port"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_username"
            app:title="@string/pref_title_smtp_username"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_password"
            app:title="@string/pref_title_smtp_password"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <ListPreference
            app:defaultValue="tls"
            app:entries="@array/smtp_encryption_entries"
            app:entryValues="@array/smtp_encryption_values"
            app:key="smtp_encryption"
            app:title="@string/pref_title_smtp_encryption"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <ListPreference
            app:defaultValue="login"
            app:entries="@array/smtp_auth_entries"
            app:entryValues="@array/smtp_auth_values"
            app:key="smtp_auth_method"
            app:title="@string/pref_title_smtp_auth_method"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_from"
            app:title="@string/pref_title_smtp_from"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="smtp_html_enabled"
            app:title="@string/pref_title_smtp_html"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_retry_count"
            app:title="@string/pref_title_smtp_retry_count"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <EditTextPreference
            app:key="smtp_retry_backoff"
            app:title="@string/pref_title_smtp_retry_backoff"
            app:useSimpleSummaryProvider="true"
            app:dependency="smtp_enabled" />

        <Preference
            app:key="smtp_test_email"
            app:title="@string/pref_title_smtp_test"
            app:dependency="smtp_enabled" />

    </PreferenceCategory>

</PreferenceScreen>
